tests/types/errors/impure_in_where_rejected.mochi
let xs = [1, 2, 3, 4]
let result = from x in xs where print(x) == null select x
